--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <p>hello world!</p>
+    <h1>Hello world!</h1>
 </body>
 </html>
