--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <h1>Krāsu Mikseris</h1>
+    <label for="color1">1. Krāsa</label>
+    <input type="color" id="color1" name="color1"><br><br>
+
+    <label for="color2">2. Krāsa</label>
+    <input type="color" id="color2" name="color2"><br><br>
+
+    <label for="color3">3. Krāsa</label>
+    <input type="color" id="color3" name="color3"><br><br>
 </body>
 </html>
