--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <body>
     <h1>Krāsu Mikseris</h1>
     <label for="color1">1. Krāsa</label>
-    <input type="color" id="color1" name="color1"><br><br>
+    <input type="color" id="color1"><br><br>
 
     <label for="color2">2. Krāsa</label>
-    <input type="color" id="color2" name="color2"><br><br>
+    <input type="color" id="color2"><br><br>
 
     <label for="color3">3. Krāsa</label>
-    <input type="color" id="color3" name="color3"><br><br>
+    <input type="color" id="color3"><br><br>
 </body>
 </html>
