--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
 
     <label for="color3">3. Krāsa</label>
     <input type="color" id="color3"><br><br>
+
+    <button onclick="mixColors()">Sajauc krāsas</button><br><br>
 </body>
 </html>
