--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <input type="color" id="color3"><br><br>
 
     <button onclick="mixColors()">Sajauc krāsas</button><br><br>
+
+    <div id="result"></div>
 </body>
 </html>
