--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="scripts.js"></script>
 </head>
 <body>
     <h1>Krāsu Mikseris</h1>
@@ -16,7 +17,7 @@
     <input type="color" id="color3"><br><br>
 
     <button onclick="mixColors()">Sajauc krāsas</button><br><br>
-
     <div id="result"></div>
+
 </body>
 </html>
