--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts.js"></script>
 </head>
+
 <body>
+
+    <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#news">News</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">About</a>
+      </div>
+      
     <h1>Krāsu Mikseris</h1>
     <label for="color1">1. Krāsa</label>
     <input type="color" id="color1"><br><br>
@@ -20,4 +30,5 @@
     <div id="result"></div>
 
 </body>
+
 </html>
