--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
       </div>
-      
+
     <h1>Krāsu Mikseris</h1>
     <label for="color1">1. Krāsa</label>
     <input type="color" id="color1"><br><br>
