--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
 
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a href="mikus69420.github.io/color-mixer">Krāsu Mikseris</a>
+        <a href="mikus69420.github.io/color-converter">Krāsu Konverteris</a>
+        <a href="mikus69420.github.io/color-gradient">Krāsu Gradientu Mikseris</a>
       </div>
 
     <h1>Krāsu Mikseris</h1>
+
     <label for="color1">1. Krāsa</label>
     <input type="color" id="color1"><br><br>
 
