--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
 
     <div class="topnav">
-        <a href="mikus69420.github.io/color-mixer">Krāsu Mikseris</a>
-        <a href="mikus69420.github.io/color-converter">Krāsu Konverteris</a>
-        <a href="mikus69420.github.io/color-gradient">Krāsu Gradientu Mikseris</a>
+        <a href="#color-mixer">Krāsu Mikseris</a>
+        <a href="#color-converter">Krāsu Konverteris</a>
+        <a href="#color-gradient">Krāsu Gradientu Mikseris</a>
       </div>
 
     <h1>Krāsu Mikseris</h1>
-
+<form>
     <label for="color1">1. Krāsa</label>
     <input type="color" id="color1"><br><br>
 
@@ -29,7 +29,7 @@
 
     <button onclick="mixColors()">Sajauc krāsas</button><br><br>
     <div id="result"></div>
-
+</form>
 </body>
 
 </html>
