--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <div class="topnav">
-        <a href="#color">Krāsu Mikseris</a>
+        <a href="#color-mixer">Krāsu Mikseris</a>
         <a href="#color-converter">Krāsu Konverteris</a>
         <a href="#color-gradient">Krāsu Gradientu Mikseris</a>
       </div>
