--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       </div>
 
     <h1>Krāsu Mikseris</h1>
+    <h2>Krāsu jaukšana</h2>
+    <h2>Krāsu jaukšanas rezultāts</h2>
 <form>
     <label for="color1">1. Krāsa</label>
     <input type="color" id="color1"><br><br>
