--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       </div>
 
     <h1>Krāsu Mikseris</h1>
+    <img src="paint_buckets.jpg" alt="paint buckets" width="500" height="300">
     <h2>Krāsu jaukšana</h2>
     
 <form>
