--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <h1>Krāsu Mikseris</h1>
-    <img src="images/paint_buckets.jpg" alt="paint buckets" width="500" height="300">
+    <img src="images/paint_buckets.jpg" alt="paint buckets" width="500" height="300" id="paint_buckets">
     <h2>Krāsu jaukšana</h2>
     
 <form>
