--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="#color-mixer">Krāsu Mikseris</a>
         <a href="#color-converter">Krāsu Konverteris</a>
         <a href="#color-gradient">Krāsu Gradientu Mikseris</a>
+        <a href="#color-generator">Krāsu Ģenerātors</a>
     </div>
 
     <h1>Krāsu Mikseris</h1>
