--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <h1>Krāsu Mikseris</h1>
-    <img src="images/paint_buckets.jpg" alt="paint buckets" width="500" height="100" id="paint_buckets">
+    <img src="images/paint_buckets.jpg" alt="paint buckets" id="paint_buckets">
     <h2>Krāsu jaukšana</h2>
     
 <form>
