--- a/index.html
+++ b/index.html
@@ -20,21 +20,22 @@
     <h1>Krāsu Mikseris</h1>
     <img src="images/paint_buckets.jpg" alt="paint buckets" id="paint_buckets">
     <h2>Krāsu jaukšana</h2>
-    
-<form>
-    <label for="color1">1. Krāsa</label>
-    <input type="color" id="color1"><br><br>
+    <div>
+        <form>
+            <label for="color1">1. Krāsa</label>
+            <input type="color" id="color1"><br><br>
 
-    <label for="color2">2. Krāsa</label>
-    <input type="color" id="color2"><br><br>
+            <label for="color2">2. Krāsa</label>
+            <input type="color" id="color2"><br><br>
 
-    <label for="color3">3. Krāsa</label>
-    <input type="color" id="color3"><br><br>
+            <label for="color3">3. Krāsa</label>
+            <input type="color" id="color3"><br><br>
 
-    <button onclick="mixColors()">Sajauc krāsas</button><br><br>
-    <h2>Krāsu jaukšanas rezultāts</h2>
-    <div id="result"></div>
-</form>
+            <button onclick="mixColors()">Sajauc krāsas</button><br><br>
+            <h2>Krāsu jaukšanas rezultāts</h2>
+            <div id="result"></div>
+        </form>
+    </div>
 </body>
 
 </html>
