--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>Krāsu Mikseris</h1>
     <img src="images/paint_buckets.jpg" alt="paint buckets" id="paint_buckets">
     <h2>Krāsu jaukšana</h2>
-    <div>
+    <div id="colors">
         <form>
             <label for="color1">1. Krāsa</label>
             <input type="color" id="color1"><br><br>
