--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <h2>Krāsu jaukšana</h2>
         <form>
             <label for="color1">1. Krāsa</label>
-            <input type="number" id="color1"><br><br>
+            <input id="color1" type="number" min="0" max="255"><br><br>
 
             <label for="color2">2. Krāsa</label>
-            <input type="number" id="color2"><br><br>
+            <input id="color2" type="number" min="0" max="255" ><br><br>
 
             <label for="color3">3. Krāsa</label>
-            <input type="number" id="color3"><br><br>
+            <input id="color3" type="number" min="0" max="255"><br><br>
 
             <button onclick="mixColors()">Sajauc krāsas</button><br><br>
             <h2>Krāsu jaukšanas rezultāts</h2>
