--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <div id="colors-mix">
         <h2>Krāsu jaukšana</h2>
         <form>
-            <label for="color1">1. Krāsa</label>
+            <label for="color1">1. Krāsa (Sarkans)</label>
             <input id="color1" type="number" min="0" max="255"><br><br>
 
-            <label for="color2">2. Krāsa</label>
+            <label for="color2">2. Krāsa (Zaļš)</label>
             <input id="color2" type="number" min="0" max="255" ><br><br>
 
-            <label for="color3">3. Krāsa</label>
+            <label for="color3">3. Krāsa (Zils)</label>
             <input id="color3" type="number" min="0" max="255"><br><br>
 
             <button onclick="mixColors()">Sajauc krāsas</button><br><br>
