--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
             <h2>Krāsu jaukšanas rezultāts</h2>
             <div id="result"></div>
         </form>
+        <table>
+            <thead>
+                <tr>
+                    <th>1. Krāsa</th>
+                    <th>2. Krāsa</th>
+                    <th>3. Krāsa</th>
+                    <th>Rezultāts</th>
+                </tr>
+        </table>
     </div>
 </body>
 
