--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <th>3. Krāsa</th>
                     <th>Rezultāts</th>
                 </tr>
+            </thead>
         </table>
     </div>
 </body>
