--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Krāsu Mikseris</h1>
         <img src="images/paint_buckets.jpg" alt="paint buckets" id="paint_buckets">
         <div style="display: flex; flex-direction: column;">
-            <div id="colors-mix">
+            <div class="colors-mix">
                 <h2>Krāsu jaukšana</h2>
                 <form>
                     <label for="color1">1. Krāsa (Sarkans)</label>
@@ -37,7 +37,7 @@
                     <div id="result"></div>
                 </form>
             </div>
-            <div>
+            <div class="colors-mix">
                 <table>
                     <thead>
                         <tr>
