--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="content">
         <h1>Krāsu Mikseris</h1>
         <img src="images/paint_buckets.jpg" alt="paint buckets" id="paint_buckets">
-        <div style="display: flex; flex-direction: column;">
+        <div style="display: flex; flex-direction: row;">
             <div class="colors-mix">
                 <h2>Krāsu jaukšana</h2>
                 <form>
