--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>1. Krāsa</th>
-                            <th>2. Krāsa</th>
-                            <th>3. Krāsa</th>
+                            <th>1. Krāsa,</th>
+                            <th>2. Krāsa,</th>
+                            <th>3. Krāsa,</th>
                             <th>Rezultāts</th>
                         </tr>
                     </thead>
