--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             </div>
             <div class="colors-mix">
                 <h2>Krāsu Ģenerātors</h2>
+                <div id="color-generator">
+                    <button onclick="generateColor()">Ģenerēt krāsu</button>
+                    <div id="color"></div>
             </div>
         </div>
     </div>
