--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
                 <h2>Krāsu Ģenerātors</h2>
                 <div id="color-generator">
                     <button onclick="generateColor()">Ģenerēt krāsu</button>
-                    <div id="color"></div>
+
+                    <div id="RandomColor"></div>
+                </div>
             </div>
         </div>
-    </div>
 </body>
 
 </html>
