--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
             <div class="colors-mix">
                 <h2>Krāsu Ģenerātors</h2>
                 <div id="color-generator">
-                    <button onclick="generateColor()">Ģenerēt krāsu</button>
+                    <form onsubmit="generateColor(); return false;">
+                        <button type="submit">Ģenerēt krāsu</button>
+                    </form>
 
                     <div id="RandomColor"></div>
                 </div>
