--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
             <div class="colors-mix">
                 <h2>Krāsu Ģenerātors</h2>
                 <div id="color-generator">
-                    <form onsubmit="generateColor(); return false;">
-                        <button type="submit">Ģenerēt krāsu</button>
-                    </form>
+                    <button onclick="generateColor()">Ģenerēt krāsu</button>
 
                     <div id="RandomColor"></div>
                 </div>
