--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
             <div class="colors-mix">
                 <h2>Krāsu Ģenerātors</h2>
                 <div id="color-generator">
-                    <form>
-                        <button type="button" onclick="generateColor()">Ģenerēt krāsu</button>
-                    </form>
-                    <div id="RandomColor"></div>
+                    <button onclick="generateRandomColor()">Ģenerēt Krāsu</button>
+                    <div id="random-color-result"></div>
                 </div>
             </div>
         </div>
