--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h2>Krāsu Gradient Mikseris</h2>
             </div>
             <div class="colors-mix">
-                <h2>Krāsu Ģenerātors</h2>
+                <h2>Krāsu Ģenerators</h2>
                 <div id="color-generator">
                     <button onclick="generateRandomColor()">Ģenerēt Krāsu</button>
                     <div id="random-color-result"></div>
