--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     <div id="result"></div>
                 </form>
             </div>
+            <div id="resulttable"></div>
             <div class="colors-mix">
                 <table>
                     <thead>
