--- a/index.html
+++ b/index.html
@@ -44,19 +44,7 @@
                     <div id="result"></div>
                 </form>
             </div>
-            <div id="resulttable"></div>
-            <div class="colors-mix">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>1. Krāsa,</th>
-                            <th>2. Krāsa,</th>
-                            <th>3. Krāsa,</th>
-                            <th>Rezultāts</th>
-                        </tr>
-                    </thead>
-                </table>
-            </div>
+            <div id="resulttable" class="colors-mix"></div>           
         </div>
         <div style="display: flex; flex-direction: row; gap: 16px;">
             <div class="colors-mix">
