--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="scripts.js"></script>
 
-<script
-  src="https://code.jquery.com/jquery-3.7.1.js"
-  integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-  crossorigin="anonymous"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/json2html/2.2.3/json2html.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -43,11 +41,15 @@
                     <div id="result"></div>
                 </form>
             </div>
-            <div id="resulttable" class="colors-mix"></div>           
+            <div id="resulttable" class="colors-mix"></div>
         </div>
         <div style="display: flex; flex-direction: row; gap: 16px;">
             <div class="colors-mix">
                 <h2>Krāsu Gradient Mikseris</h2>
+                
+
+
+
             </div>
 
             <div class="colors-mix">
