--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                     <div id="result"></div>
                 <!-- </form> -->
             </div>
-            <div id="resulttable" class="colors-mix"></div>
+            <div class="colors-mix">
+                <table id="resulttable" ></table>
+            </div>
         </div>
         <div style="display: flex; flex-direction: row; gap: 16px;">
             <div class="colors-mix">
