--- a/index.html
+++ b/index.html
@@ -41,15 +41,16 @@
                 <!-- </form> -->
             </div>
             <div class="colors-mix">
-                <table id="resulttable" ></table>
+                <table id="resulttable">
+                    <thead>
+                        <tr><td>Red:</td><td>Green:</td><td>Blue:</td><td>Result:</td></tr>
+                    </thead>
+                </table>
             </div>
         </div>
         <div style="display: flex; flex-direction: row; gap: 16px;">
             <div class="colors-mix">
                 <h2>Krāsu Gradient Mikseris</h2>
-                
-
-
             </div>
 
             <div class="colors-mix">
