--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     <thead>
                         <tr><td>Red:</td><td>Green:</td><td>Blue:</td><td>Result:</td></tr>
                     </thead>
+                    <tbody></tbody>
                 </table>
             </div>
         </div>
