--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </table>
             </div>
         </div>
-        <div style="display: flex; flex-direction: row; gap: 16px;">
+        <div class="class-all">
             <div class="colors-mix">
                 <h2>Krāsu Gradient Mikseris</h2>
                 
