--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <h2>Krāsu jaukšana</h2>
                 <!-- <form> -->
                 <label for="color1">1. Krāsa (Sarkans)</label>
-                <input id="color1" type="number" min="0" max="255"><br><br>
+                <input id="color1" type="number" min="0" max="255" value="255"><br><br>
 
                 <label for="color2">2. Krāsa (Zaļš)</label>
-                <input id="color2" type="number" min="0" max="255"><br><br>
+                <input id="color2" type="number" min="0" max="255" value="25"><br><br>
 
                 <label for="color3">3. Krāsa (Zils)</label>
-                <input id="color3" type="number" min="0" max="255"><br><br>
+                <input id="color3" type="number" min="0" max="255" value="125"><br><br>
 
                 <button onclick="mixColors()">Sajauc krāsas</button><br><br>
                 <h2>Krāsu jaukšanas rezultāts</h2>
