--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="class-all">
             <div class="colors-mix">
-                <h2>Krāsu Gradient Mikseris</h2>
+                <h2>Krāsu Gradāciju Mikseris</h2>
                 
             </div>
             <div class="colors-mix">
