--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="topnav">
         <a href="#color-mixer">Krāsu Mikseris</a>
-        <a href="#color-gradient">Krāsu Gradientu Mikseris</a>
+        <a href="#color-gradient">Krāsu Toņu Mikseris</a>
         <a href="#color-generator">Krāsu Ģenerātors</a>
     </div>
     <div id="content">
@@ -50,7 +50,7 @@
         </div>
         <div class="class-all">
             <div class="colors-mix">
-                <h2>Krāsu Gradāciju Mikseris</h2>
+                <h2>Krāsu Toņu Mikseris</h2>
                 
             </div>
             <div class="colors-mix">
