--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 
 <body>
 
-    <div class="topnav">
-        <a href="#color-mixer">Krāsu Mikseris</a>
-        <a href="#color-gradient">Krāsu Toņu Mikseris</a>
-        <a href="#color-generator">Krāsu Ģenerātors</a>
-    </div>
+    <ul class="topnav">
+        <li><a href="#color-mixer">Krāsu Mikseris</a></li>
+        <li><a href="#color-gradient">Krāsu Toņu Mikseris</a></li>
+        <li><a href="#color-generator">Krāsu Ģenerātors</a></li>
+    </ul>
+
     <div id="content">
         <h1>Krāsu Mikseris</h1>
         <img src="images/paint_buckets.jpg" alt="paint buckets" id="paint_buckets">
@@ -42,7 +43,12 @@
             <div class="colors-mix">
                 <table id="resulttable">
                     <thead>
-                        <tr><td>Red:</td><td>Green:</td><td>Blue:</td><td>Result:</td></tr>
+                        <tr>
+                            <td>Red:</td>
+                            <td>Green:</td>
+                            <td>Blue:</td>
+                            <td>Result:</td>
+                        </tr>
                     </thead>
                     <tbody></tbody>
                 </table>
@@ -51,7 +57,7 @@
         <div class="class-all">
             <div class="colors-mix">
                 <h2>Krāsu Toņu Mikseris</h2>
-                
+
             </div>
             <div class="colors-mix">
                 <h2>Krāsu Ģenerators</h2>
