--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
         <div class="class-all">
             <div class="colors-mix">
                 <h2>Krāsu Toņu Mikseris</h2>
+                <div id="color-mixer">
+
+                </div>
 
             </div>
             <div class="colors-mix">
