--- a/index.html
+++ b/index.html
@@ -71,6 +71,15 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div>
+        <button onclick="showInfo()">Autors</button>
+        <div id="info">
+            <h3>Autora Informācija</h3>
+            <p><b>Autora vārds, uzvārds, studenta kods</b></p>
+            <p><i>Mikus Baumanis, mb24060</i></p>
+        </div>
+    </div>
 </body>
 
 </html>
