--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <button onclick="showInfo()">Autors</button>
         <div id="info">
             <h3>Autora Informācija</h3>
-            <p><b>Autora vārds, uzvārds, studenta kods</b></p>
+            <p><b>Autora vārds, uzvārds, studenta kods:</b></p>
             <p><i>Mikus Baumanis, mb24060</i></p>
         </div>
     </div>
