--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div>
-        <button onclick="showInfo()">Autors</button>
+        <button onclick="showInfo()" id="infoButton">Autors</button>
         <div id="info">
             <h3>Autora Informācija</h3>
             <p><b>Autora vārds, uzvārds, studenta kods:</b></p>
