--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
     </ul>
     <br />
     <button onclick="showInfo()" id="infoButton">Autors</button>
+    <div id="content">
     <div id="info">
         <h3>Autora Informācija</h3>
         <p><b>Autora vārds, uzvārds, studenta kods:</b></p>
         <p><i>Mikus Baumanis, mb24060</i></p>
-    </div>
-    <div id="content">
-        <h1>Krāsu Mikseris</h1>
+    </div>        <h1>Krāsu Mikseris</h1>
         <img src="images/paint_buckets.jpg" alt="paint buckets" id="paint_buckets" />
         <div class="class-all">
             <div class="colors-mix">
