--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
     <br />
     <button onclick="showInfo()" id="infoButton">Autors</button>
     <div id="content">
-    <div id="info">
-        <h3>Autora Informācija</h3>
-        <p><b>Autora vārds, uzvārds, studenta kods:</b></p>
-        <p><i>Mikus Baumanis, mb24060</i></p>
-    </div>        <h1>Krāsu Mikseris</h1>
+        <div id="info">
+            <h3>Autora Informācija</h3>
+            <p><b>Autora vārds, uzvārds, studenta kods:</b></p>
+            <p><i>Mikus Baumanis, mb24060</i></p>
+        </div>
+        <h1>Krāsu Mikseris</h1>
         <img src="images/paint_buckets.jpg" alt="paint buckets" id="paint_buckets" />
         <div class="class-all">
             <div class="colors-mix">
@@ -42,11 +43,10 @@
                     <tr>
                         <td><label for="color3">3.Krāsa (Zila)</label></td>
                         <td><input id="color3" type="number" min="0" max="255" value="127" /></td>
-                    </tr>                    
+                    </tr>
                 </table>
                 <button onclick="mixColors()">Sajaukt krāsas</button>
-                <br />
-                <h2>Krāsu jaukšanas rezultāts</h2>
+                <hr/>
                 <div id="result"></div>
                 <!-- </form> -->
             </div>
@@ -60,7 +60,7 @@
                             <td>Rezultāts:</td>
                         </tr>
                     </thead>
-                    <tbody></tbody>                    
+                    <tbody></tbody>
                 </table>
                 <button onclick="clearColors()">Nodzēst rezultātus</button>
             </div>
