--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     </thead>
                     <tbody></tbody>
                 </table>
-                <button onclick="clearColors()">Nodzēst rezultātus</button>
+                <button id="clearColorsButton" onclick="clearColors()">Nodzēst rezultātus</button>
             </div>
         </div>
         <div class="class-all">
