--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Krāsu Mikseris</h1>
         <img src="images/paint_buckets.jpg" alt="paint buckets" id="paint_buckets" />
         <div class="class-all">
-            <div class="colors-mix">
+            <div id="color-mixer" class="colors-mix">
                 <h2>Krāsu jaukšana</h2>
                 <!-- <form> -->
                 <table id="table-grid">
@@ -69,7 +69,7 @@
         <div class="class-all">
             <div class="colors-mix">
                 <h2>Krāsu Toņu Mikseris</h2>
-                <div id="color-mixer"></div>
+                <div id="color-gradient"></div>
             </div>
             <div class="colors-mix">
                 <h2>Krāsu Ģenerators</h2> 
