--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <ul class="topnav">
-        <li><a href="#color-mixer">Krāsu Mikseris</a></li>
+        <li><a href="#color-mixer">Krāsu Jaukšana</a></li>
         <li><a href="#color-gradient">Krāsu Toņu Mikseris</a></li>
         <li><a href="#color-generator">Krāsu Ģenerātors</a></li>
     </ul>
