--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <input type="color" class="gcolors c1" />
                         <input type="color" class="gcolors c2" />
                         <br />
-                        <button class="randomColorBtn">Random</button>
+                        <button class="randomColorBtn">Pārsteidz mani</button>
                     </div>
                     <br />
                     <div class="cont" id="gradient-cont"></div>
