--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h2>Krāsu Toņu Mikseris</h2>
                 <div>
 
-                    <div class="cont">
+                    <div class="cont" id="color-gradient">
                         <input id="c1" type="color" class="gcolors" />
                         <input id="c2" type="color" class="gcolors" />
                         <br />
